<resources>
    <string name="app_name">SpaceX</string>
    <string name="network_error">Network Error</string>
    <string name="response_error">Something went wrong</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="not_found">Not found</string>
    <string name="internal_err">Internal Server Error</string>
    <string name="svc_un_avail">Service Unavailable</string>
    <string name="connection_error">Failed to connect</string>
    <string name="timeout">Timeout</string>
    <string name="description">description</string>
    <string name="no_data">No Data</string>
    <string name="malformed">Malformed Data</string>
    <string name="refresh_menu_label">Refresh</string>
    <string name="sort_menu_label">Sort</string>
    <string name="menu_filter_label">Filter</string>
    <string name="mission_name_menu_label">Sort by Mission Name</string>
    <string name="filter_launch_success_menu_label">Filter by Launch Success</string>
    <string name="launch_date_menu_label">Sort by Launch Date</string>
    <string name="details">Details : %s</string>
    <string name="launch_status">Is launch Success: %s</string>
    <string name="link_webcast">Webcast : %s</string>
    <string name="link_wiki">Wiki : %s</string>
    <string name="link_web_article">Article : %s</string>
    <string name="upcoming">Upcoming : %s</string>
    <string name="flight_number">Flight Number: %s</string>

    <string name="rocket_height">Rocket height: %s meters, %s feet</string>
    <string name="rocket_diameter">Rocket Diameter: %s meters, %s feet</string>
    <string name="rocket_mass">Rocket Diameter: %s kg, %s lb</string>

    <string name="rocket_name">Rocket Name : %s</string>
    <string name="rocket_type">Type: %s</string>
    <string name="rocket_active">Rocket active: %s</string>
    <string name="rocket_stages">stages: %s</string>
    <string name="rocket_boosters">boosters: %s</string>


    <string name="rocket_cost_per_launch">Cost per launch: $%s</string>
    <string name="rocket_success_rate">Rocket Success rate percent: %s</string>
    <string name="rocket_first_flight">Rocket First flight: %s</string>
    <string name="rocket_country">Country: %s</string>
    <string name="rocket_company">Rocket Company: %s</string>
    <string name="rocket_wiki">Rocket wiki: %s</string>
    <string name="rocket_description">Rocket description: %s</string>

</resources>